--- a/app/views/suppliers/_supplier.html.erb
+++ b/app/views/suppliers/_supplier.html.erb
@@ -1,7 +1,12 @@
-<div id="<%= dom_id supplier %>">
+<tr id="<%= dom_id supplier %>">
+  <td><%= supplier.id %></td>
+  <td><%= supplier.title %></td>
+  <td><%= supplier.created_at %></td>
+  <td><%= supplier.updated_at %></td>
   <% if action_name != "show" %>
-    <%= link_to "Show this supplier", supplier, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to 'Edit this supplier', edit_supplier_path(supplier), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
-    <hr class="mt-6">
+    <td>
+      <%= link_to "Show this supplier", supplier, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+      <%= link_to 'Edit this supplier', edit_supplier_path(supplier), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+    </td>
   <% end %>
-</div>
+</tr>
