Change table layout to vertical in the show views

--- a/app/views/colors/show.html.slim
+++ b/app/views/colors/show.html.slim
@@ -14,7 +14,7 @@ nav
         <i class='icn'>✏️</i> Edit
 
 main
-  table(role="grid")
+  table.vertical(role="grid")
     thead
       tr
         th
