--- a/app/views/colors/_color.html.slim
+++ b/app/views/colors/_color.html.slim
@@ -10,6 +10,8 @@ tr id="#{dom_id color}"
   - if action_name != "show" 
     td
       == link_to color
-        <i class='icn'>📄</i> Show
+        i.icn 📄
+        | Show
       == link_to edit_color_path(color)
-        <i class='icn'>✏️</i> Edit
+        i.icn ✏️
+        | Edit
