--- a/app/views/colors/_form.html.slim
+++ b/app/views/colors/_form.html.slim
@@ -1,7 +1,10 @@
 == form_with(model: color) do |form|
   - if color.errors.any?
     article.notice.is-error
-      header <i class="icn">🙀</i> #{pluralize(color.errors.count, "error")} prohibited this color from being saved: <i class="icn">🙀</i>
+      header
+        i.icn 🙀
+        | Sorry, we can't save this, fix the errors and try again:
+        i.icn 🙀
       ul
         - color.errors.each do |error|
           li
