--- a/app/views/franchises/_franchise.html.slim
+++ b/app/views/franchises/_franchise.html.slim
@@ -10,6 +10,8 @@ tr id="#{dom_id franchise}"
   - if action_name != "show" 
     td
       == link_to franchise
-        <i class='icn'>📄</i> Show
+        i.icn 📄
+        | Show
       == link_to edit_franchise_path(franchise)
-        <i class='icn'>✏️</i> Edit
+        i.icn ✏️
+        | Edit
