--- a/app/views/shapes/_form.html.slim
+++ b/app/views/shapes/_form.html.slim
@@ -1,7 +1,10 @@
 == form_with(model: shape) do |form|
   - if shape.errors.any?
     article.notice.is-error
-      header <i class="icn">🙀</i> #{pluralize(shape.errors.count, "error")} prohibited this shape from being saved: <i class="icn">🙀</i>
+      header
+        i.icn 🙀
+        | Sorry, we can't save this, fix the errors and try again:
+        i.icn 🙀
       ul
         - shape.errors.each do |error|
           li
