--- a/app/views/sizes/_size.html.slim
+++ b/app/views/sizes/_size.html.slim
@@ -10,6 +10,8 @@ tr id="#{dom_id size}"
   - if action_name != "show" 
     td
       == link_to size
-        <i class='icn'>📄</i> Show
+        i.icn 📄
+        | Show
       == link_to edit_size_path(size)
-        <i class='icn'>✏️</i> Edit
+        i.icn ✏️
+        | Edit
