--- a/app/views/versions/_form.html.slim
+++ b/app/views/versions/_form.html.slim
@@ -1,7 +1,10 @@
 == form_with(model: version) do |form|
   - if version.errors.any?
     article.notice.is-error
-      header <i class="icn">🙀</i> #{pluralize(version.errors.count, "error")} prohibited this version from being saved: <i class="icn">🙀</i>
+      header
+        i.icn 🙀
+        | Sorry, we can't save this, fix the errors and try again:
+        i.icn 🙀
       ul
         - version.errors.each do |error|
           li
