--- a/app/views/versions/index.html.slim
+++ b/app/views/versions/index.html.slim
@@ -9,7 +9,8 @@ nav
   ul
     li
       == link_to new_version_path
-        <i class='icn'>🐣</i> New version
+        i.icn 🐣
+        | New version
 main
   table(role="grid")
     thead
