--- a/app/views/brands/edit.html.slim
+++ b/app/views/brands/edit.html.slim
@@ -6,6 +6,7 @@ nav
   ul
     li   
       == link_to @brand
-        <i class='icn'>📄</i> Show
+        i.icn 📄
+        | Show
 
 == render 'form', brand: @brand
