--- a/app/views/shapes/edit.html.slim
+++ b/app/views/shapes/edit.html.slim
@@ -6,6 +6,7 @@ nav
   ul
     li   
       == link_to @shape
-        <i class='icn'>📄</i> Show
+        i.icn 📄
+        | Show
 
 == render 'form', shape: @shape
