--- a/app/views/shapes/index.html.slim
+++ b/app/views/shapes/index.html.slim
@@ -1,6 +1,8 @@
 - if notice.present?
   article.notice.is-info
-    <i class="icn">😼</i> #{notice} <i class="icn">😼</i>
+    i.icn 😼
+    == notice
+    i.icn 😼
 
 nav
   ul
@@ -9,7 +11,8 @@ nav
   ul
     li   
       == link_to new_shape_path
-        <i class='icn'>🐣</i> New shape
+        i.icn 🐣
+        | New shape
 main
   table(role="grid")
     thead
