--- a/app/views/versions/edit.html.slim
+++ b/app/views/versions/edit.html.slim
@@ -6,6 +6,7 @@ nav
   ul
     li
       == link_to @version
-        <i class='icn'>📄</i> Show
+        i.icn 📄
+        | Show
 
 == render 'form', version: @version
