--- a/app/views/versions/_form.html.slim
+++ b/app/views/versions/_form.html.slim
@@ -3,7 +3,7 @@
     article.notice.is-error
       header
         i.icn 🙀
-        | Sorry, we can't save this, fix the errors and try again:
+        | Sorry, we can't save this. Fix the errors and try again:
         i.icn 🙀
       ul
         - version.errors.each do |error|
