Add CRUD for products

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,6 +22,8 @@ html
           li
             == link_to "Purchases", "#purchases_path"
           li
+            == link_to "Products", products_path
+          li
             == link_to "Suppliers", suppliers_path
           li
             == link_to "Brands", brands_path
