--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -1,13 +1,36 @@
-| <%= form_with(model: product, class: "contents") do |form| %> <% if product.errors.any? %> 
-#error_explanation.bg-red-50.text-red-500.px-3.py-2.font-medium.rounded-lg.mt-3
-  h2
-    | <%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:
-  ul
-    |  <% product.errors.each do |error| %> 
-    li
-      | <%= error.full_message %>
-    |  <% end %> 
-|  <% end %> 
-.inline
-  |  <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %> 
-|  <% end %> 
+== form_with(model: product) do |form|
+  - if product.errors.any?
+    article.notice.is-error
+      header
+        i.icn 🙀
+        | Sorry, we can't save this. Fix the errors and try again:
+        i.icn 🙀
+      ul
+        - product.errors.each do |error|
+          li
+            == error.full_message
+  == form.label :supplier
+  == form.collection_select(:supplier_id, Supplier.all, :id, :title)
+
+  == form.label :franchise
+  == form.collection_select(:franchise_id, Franchise.all, :id, :title)
+
+  == form.label :title
+  == form.text_field :title
+
+  == form.label :size
+  == form.collection_select(:size_id, Size.all, :id, :value)
+
+  == form.label :shape
+  == form.collection_select(:shape_id, Shape.all, :id, :title)
+
+  == form.label :brand
+  == form.collection_select(:brand_id, Brand.all, :id, :title)
+
+  == form.label :version
+  == form.collection_select(:version_id, Version.all, :id, :value)
+
+  == form.label :color
+  == form.collection_select(:color_id, Color.all, :id, :value)
+
+  == form.submit
