--- a/app/views/brands/edit.html.slim
+++ b/app/views/brands/edit.html.slim
@@ -8,5 +8,5 @@ nav
       == link_to @brand
         i.icn 📄
         | Show
-
-== render 'form', brand: @brand
+main
+  == render 'form', brand: @brand
