--- a/app/views/franchises/edit.html.slim
+++ b/app/views/franchises/edit.html.slim
@@ -8,5 +8,5 @@ nav
       == link_to @franchise
         i.icn 📄
         | Show
-
-== render 'form', franchise: @franchise
+main
+  == render 'form', franchise: @franchise
