--- a/app/views/shapes/edit.html.slim
+++ b/app/views/shapes/edit.html.slim
@@ -8,5 +8,5 @@ nav
       == link_to @shape
         i.icn 📄
         | Show
-
-== render 'form', shape: @shape
+main
+  == render 'form', shape: @shape
