--- a/app/views/suppliers/edit.html.slim
+++ b/app/views/suppliers/edit.html.slim
@@ -8,5 +8,5 @@ nav
       == link_to @supplier
         i.icn 📄
         | Show
-
-== render 'form', supplier: @supplier
+main
+  == render 'form', supplier: @supplier
