--- a/app/views/versions/edit.html.slim
+++ b/app/views/versions/edit.html.slim
@@ -8,5 +8,5 @@ nav
       == link_to @version
         i.icn 📄
         | Show
-
-== render 'form', version: @version
+main
+  == render 'form', version: @version
