--- a/app/views/brands/new.html.slim
+++ b/app/views/brands/new.html.slim
@@ -1,3 +1,3 @@
 == link_to "Back to brands", brands_path
-h1 New brand
-== render 'form', brand: @brand
+h1 New brandmain
+  == render 'form', brand: @brand
