--- a/app/views/colors/edit.html.slim
+++ b/app/views/colors/edit.html.slim
@@ -8,5 +8,5 @@ nav
       == link_to @color
         i.icn 📄
         | Show
-
-== render 'form', color: @color
+main
+  == render 'form', color: @color
