--- a/app/views/colors/new.html.slim
+++ b/app/views/colors/new.html.slim
@@ -1,3 +1,3 @@
 == link_to "Back to colors", colors_path
-h1 New color
-== render 'form', color: @color
+h1 New colormain
+  == render 'form', color: @color
