--- a/app/views/franchises/new.html.slim
+++ b/app/views/franchises/new.html.slim
@@ -1,3 +1,3 @@
 == link_to "Back to franchises", franchises_path
-h1 New franchise
-== render 'form', franchise: @franchise
+h1 New franchisemain
+  == render 'form', franchise: @franchise
