--- a/app/views/products/edit.html.slim
+++ b/app/views/products/edit.html.slim
@@ -2,11 +2,12 @@ nav
   ul
     li
       == link_to "Back to products", @product
-      h1 Editing product
+      h1 Editing "#{@product.title}"
   ul
     li   
       == link_to @product
         i.icn 📄
         | Show
 
-== render 'form', product: @product
+main
+  == render 'form', product: @product
