--- a/app/views/products/new.html.slim
+++ b/app/views/products/new.html.slim
@@ -1,3 +1,3 @@
 == link_to "Back to products", products_path
-h1 New product
-== render 'form', product: @product
+h1 New productmain
+  == render 'form', product: @product
