--- a/app/views/shapes/new.html.slim
+++ b/app/views/shapes/new.html.slim
@@ -1,3 +1,3 @@
 == link_to "Back to shapes", shapes_path
-h1 New shape
-== render 'form', shape: @shape
+h1 New shapemain
+  == render 'form', shape: @shape
