--- a/app/views/sizes/new.html.slim
+++ b/app/views/sizes/new.html.slim
@@ -1,3 +1,3 @@
 == link_to "Back to sizes", sizes_path
-h1 New size
-== render 'form', size: @size
+h1 New sizemain
+  == render 'form', size: @size
