--- a/app/views/suppliers/new.html.slim
+++ b/app/views/suppliers/new.html.slim
@@ -1,3 +1,3 @@
 == link_to "Back to suppliers", suppliers_path
-h1 New supplier
-== render 'form', supplier: @supplier
+h1 New suppliermain
+  == render 'form', supplier: @supplier
