--- a/app/views/versions/new.html.slim
+++ b/app/views/versions/new.html.slim
@@ -1,3 +1,3 @@
 == link_to "Back to versions", versions_path
-h1 New version
-== render 'form', version: @version
+h1 New versionmain
+  == render 'form', version: @version
