Fix a typo in the 'new' templates

--- a/app/views/franchises/new.html.slim
+++ b/app/views/franchises/new.html.slim
@@ -1,3 +1,4 @@
 == link_to "Back to franchises", franchises_path
-h1 New franchisemain
+h1 New franchise
+main
   == render 'form', franchise: @franchise
