Add linting via Rubocop and Standard

--- a/app/views/brands/show.html.slim
+++ b/app/views/brands/show.html.slim
@@ -31,4 +31,4 @@ main
     tbody
       == render @brand
 
-== button_to 'Destroy this brand', brand_path(@brand), method: :delete, class: "btn-danger"  
+== button_to "Destroy this brand", brand_path(@brand), method: :delete, class: "btn-danger"  
