--- a/app/views/colors/show.html.slim
+++ b/app/views/colors/show.html.slim
@@ -31,4 +31,4 @@ main
     tbody
       == render @color
 
-== button_to 'Destroy this color', color_path(@color), method: :delete, class: "btn-danger"
+== button_to "Destroy this color", color_path(@color), method: :delete, class: "btn-danger"
