--- a/app/views/franchises/new.html.slim
+++ b/app/views/franchises/new.html.slim
@@ -1,4 +1,4 @@
 == link_to "Back to franchises", franchises_path
 h1 New franchise
 main
-  == render 'form', franchise: @franchise
+  == render "form", franchise: @franchise
