--- a/app/views/franchises/show.html.slim
+++ b/app/views/franchises/show.html.slim
@@ -31,4 +31,4 @@ main
     tbody
       == render @franchise
 
-== button_to 'Destroy this franchise', franchise_path(@franchise), method: :delete, class: "btn-danger"  
+== button_to "Destroy this franchise", franchise_path(@franchise), method: :delete, class: "btn-danger"  
