--- a/app/views/products/new.html.slim
+++ b/app/views/products/new.html.slim
@@ -1,4 +1,4 @@
 == link_to "Back to products", products_path
 h1 New product
 main
-  == render 'form', product: @product
+  == render "form", product: @product
