--- a/app/views/shapes/show.html.slim
+++ b/app/views/shapes/show.html.slim
@@ -31,4 +31,4 @@ main
     tbody
       == render @shape
 
-== button_to 'Destroy this shape', shape_path(@shape), method: :delete, class: "btn-danger"  
+== button_to "Destroy this shape", shape_path(@shape), method: :delete, class: "btn-danger"  
