--- a/app/views/sizes/show.html.slim
+++ b/app/views/sizes/show.html.slim
@@ -31,4 +31,4 @@ main
     tbody
       == render @size
 
-== button_to 'Destroy this size', size_path(@size), method: :delete, class: "btn-danger"
+== button_to "Destroy this size", size_path(@size), method: :delete, class: "btn-danger"
