--- a/app/views/suppliers/show.html.slim
+++ b/app/views/suppliers/show.html.slim
@@ -31,4 +31,4 @@ main
     tbody
       == render @supplier
 
-== button_to 'Destroy this supplier', supplier_path(@supplier), method: :delete, class: "btn-danger"  
+== button_to "Destroy this supplier", supplier_path(@supplier), method: :delete, class: "btn-danger"  
