--- a/app/views/versions/show.html.slim
+++ b/app/views/versions/show.html.slim
@@ -31,4 +31,4 @@ main
     tbody
       == render @version
 
-== button_to 'Destroy this version', version_path(@version), method: :delete, class: "btn-danger"
+== button_to "Destroy this version", version_path(@version), method: :delete, class: "btn-danger"
