--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,13 @@
  *= require_tree .
  *= require_self
  */
+:root {
+  --ss-primary-color: var(--primary-hover);
+  --ss-bg-color: var(--background-color);
+  --ss-font-color: var(--form-element-color);
+  --ss-border-color: var(--form-element-border-color);
+  --ss-border-radius: var(--border-radius);
+}
 @font-face {
   font-family: "Noto Emo";
   font-style: normal;
@@ -151,4 +158,26 @@ article.notice .icn {
 }
 [type="submit"] {
   margin-top: var(--spacing);
+}
+.ss-main {
+  background-color: var(--form-element-background-color);
+  padding: var(--form-element-spacing-vertical) 0;
+  padding-right: calc(var(--form-element-spacing-horizontal) + 1.5rem);
+  padding-left: var(--form-element-spacing-horizontal);
+  margin-bottom: var(--spacing);
+
+  background-image: var(--icon-chevron);
+  background-position: center right 0.75rem;
+  background-size: 1rem auto;
+  background-repeat: no-repeat;
+}
+.ss-content .ss-search input {
+  background-position: center right 0.75rem;
+  background-size: 1rem auto;
+  background-repeat: no-repeat;
+}
+.ss-main svg,
+.ss-arrow {
+  display: none;
+  opacity: 0;
 }
