--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -2,7 +2,7 @@ tr id="#{dom_id product}"
   td
     == product.id
   td
-    == product.full_name
+    == product.full_title
   - if action_name != "show" 
     td
       == link_to product
