--- a/app/views/franchises/edit.html.slim
+++ b/app/views/franchises/edit.html.slim
@@ -1,12 +1,4 @@
-nav
-  ul
-    li
-      == link_to "Back to franchises", @franchise
-      h1 Editing franchise
-  ul
-    li   
-      == link_to @franchise
-        i.icn 📄
-        | Show
+== render "_shared/nav-edit", model: @franchise
+
 main
   == render "form", franchise: @franchise
