--- a/app/views/brands/_form.html.slim
+++ b/app/views/brands/_form.html.slim
@@ -1,14 +1,5 @@
 == form_with(model: brand) do |form|
-  - if brand.errors.any?
-    article.notice.is-error
-      header
-        i.icn 🙀
-        | Sorry, we can't save this. Fix the errors and try again:
-        i.icn 🙀
-      ul
-        - brand.errors.each do |error|
-          li
-            == error.full_message
+  == render "_shared/notice-err", model: brand
   == form.label :title
   == form.text_field :title 
   == form.submit
