--- a/app/views/brands/edit.html.slim
+++ b/app/views/brands/edit.html.slim
@@ -1,12 +1,4 @@
-nav
-  ul
-    li
-      == link_to "Back to brands", @brand
-      h1 Editing brand
-  ul
-    li   
-      == link_to @brand
-        i.icn 📄
-        | Show
+== render "_shared/nav-edit", model: @brand
+
 main
   == render "form", brand: @brand
