--- a/app/views/brands/show.html.slim
+++ b/app/views/brands/show.html.slim
@@ -1,20 +1,6 @@
-- if notice.present?
-  article.notice.is-info
-    i.icn 😼
-    == notice
-    i.icn 😼
+== render "_shared/notice"
 
-nav
-  ul
-    li
-      == link_to "Back to brands", brands_path
-      h1
-        == @brand.title
-  ul
-    li   
-      == link_to edit_brand_path(@brand)
-        i.icn ✏️
-        | Edit
+== render "_shared/nav-show", model: @brand
 
 main
   table.vertical(role="grid")
