--- a/app/views/shapes/edit.html.slim
+++ b/app/views/shapes/edit.html.slim
@@ -1,12 +1,4 @@
-nav
-  ul
-    li
-      == link_to "Back to shapes", @shape
-      h1 Editing shape
-  ul
-    li   
-      == link_to @shape
-        i.icn 📄
-        | Show
+== render "_shared/nav-edit", model: @shape
+
 main
   == render "form", shape: @shape
