--- a/app/views/sizes/_form.html.slim
+++ b/app/views/sizes/_form.html.slim
@@ -1,14 +1,5 @@
 == form_with(model: size) do |form|
-  - if size.errors.any?
-    article.notice.is-error
-      header
-        i.icn 🙀
-        | Sorry, we can't save this. Fix the errors and try again:
-        i.icn 🙀
-      ul
-        - size.errors.each do |error|
-          li
-            == error.full_message
+  == render "_shared/notice-err", model: size
   == form.label :value
   == form.text_field :value 
   == form.submit
