--- a/app/views/sizes/edit.html.slim
+++ b/app/views/sizes/edit.html.slim
@@ -1,12 +1,4 @@
-nav
-  ul
-    li
-      == link_to "Back to sizes", sizes_path
-      h1 Editing size
-  ul
-    li
-      == link_to @size
-        i.icn 📄
-        | Show
+== render "_shared/nav-edit", model: @size
+
 main
   == render "form", size: @size
