--- a/app/views/sizes/index.html.slim
+++ b/app/views/sizes/index.html.slim
@@ -1,18 +1,7 @@
-- if notice.present?
-  article.notice.is-info
-    i.icn 😼
-    == notice
-    i.icn 😼
+== render "_shared/notice"
 
-nav
-  ul
-    li 
-      h1 Sizes
-  ul
-    li
-      == link_to new_size_path
-        i.icn 🐣
-        | New size
+== render "_shared/nav-index", model: @sizes
+
 main
   table(role="grid")
     thead
