--- a/app/views/suppliers/edit.html.slim
+++ b/app/views/suppliers/edit.html.slim
@@ -1,12 +1,4 @@
-nav
-  ul
-    li
-      == link_to "Back to suppliers", @supplier
-      h1 Editing supplier
-  ul
-    li   
-      == link_to @supplier
-        i.icn 📄
-        | Show
+== render "_shared/nav-edit", model: @supplier
+
 main
   == render "form", supplier: @supplier
