--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -21,7 +21,7 @@ html
           li
             == link_to "Sales", "#sales_path"
           li
-            == link_to "Purchases", "#purchases_path"
+            == link_to "Purchases", purchases_path
           li
             == link_to "Products", products_path
           li
