--- a/app/views/purchases/edit.html.slim
+++ b/app/views/purchases/edit.html.slim
@@ -1,10 +1,4 @@
-h1 Editing purchase
+== render "_shared/nav-edit", model: @purchase
 
-== render "form", purchase: @purchase
-
-br
-
-div
-  => link_to "Show this purchase", @purchase
-  '|
-  =< link_to "Back to purchases", purchases_path
+main
+  == render "form", purchase: @purchase
