--- a/app/views/purchases/new.html.slim
+++ b/app/views/purchases/new.html.slim
@@ -1,8 +1,4 @@
+== link_to "Back to purchases", purchases_path
 h1 New purchase
-
-== render "form", purchase: @purchase
-
-br
-
-div
-  = link_to "Back to purchases", purchases_path
+main
+  == render "form", purchase: @purchase
