--- a/app/views/purchases/index.html.slim
+++ b/app/views/purchases/index.html.slim
@@ -11,7 +11,7 @@ main
         th.right
           | Price
         th.right
-          | Paid
+          | Debt
         th
           | Supplier
         th
