--- a/app/views/_shared/_nav-show.html.slim
+++ b/app/views/_shared/_nav-show.html.slim
@@ -2,7 +2,10 @@ nav
   ul
     li
       == link_to "Back to #{model.model_name.plural}", send("#{model.model_name.plural}_path")
-      h1 #{model.model_name.name} "#{model.respond_to?(:title) ? model.title : model.value}"
+      - if defined?(custom_heading)
+        == yield
+      - else
+        h1 #{model.model_name.name} #{model.respond_to?(:title) ? model.title : model.value}
   ul
     li
       == link_to controller: "#{model.model_name.plural}", action: "edit", id: model
