--- a/app/views/purchases/show.html.slim
+++ b/app/views/purchases/show.html.slim
@@ -1,10 +1,61 @@
-p style="color: green" = notice
+== render "_shared/notice"
 
-== render @purchase
+== render "_shared/nav-show", model: @purchase, custom_heading: true
+  h1 == @purchase.product.full_title
 
-div
-  => link_to "Edit this purchase", edit_purchase_path(@purchase)
-  '|
-  =< link_to "Back to purchases", purchases_path
+main
+  table.vertical(role="grid")
+    thead
+      tr
+        th Price
+        th Debt
+        th Paid
+        th Progress
+        th Order reference
+        th Date
+        th Supplier
+    tbody
+      tr
+        td
+          == @purchase.amount
+          .sign
+            |  × 
+          == number_to_currency(@purchase.item_price, locale: "de", unit: "€")
+          .sign
+            |  = 
+          == number_to_currency(@purchase.price, locale: "de", unit: "€")
+        td
+          .sign total: 
+          == number_to_currency(@purchase.debt, locale: "de", unit: "€")
+          .sign , per item: 
+          == number_to_currency(@purchase.item_debt, locale: "de", unit: "€")
+        td == number_to_currency(@purchase.paid, locale: "de", unit: "€")
+        td
+          progress(value=@purchase.progress max=100)
+        td == @purchase.order_reference
+        td == @purchase.created_at.strftime("%d.%m.%Y")
+        td == @purchase.supplier.title
 
-  = button_to "Destroy this purchase", @purchase, method: :delete
+article
+  h3 Payments
+  table
+    thead
+      tr
+        th Amount
+        th Date
+    tbody#payments
+      - @purchase.payments.each do |payment|
+        tr
+          td == number_to_currency(payment.value, locale: "de", unit: "€")
+          td == payment.payment_date.strftime("%d.%m.%Y")
+
+  = form_with model: @purchase.payments.new, class: "payment", data: { controller: "payment", action: "turbo:submit-end->payment#clear" } do |form|
+    - if form.object.errors.any?
+      - form.object.errors.full_messages.each do |message|
+        = message
+
+    = form.hidden_field :purchase_id
+    = form.number_field :value, placeholder: "How much did you pay?", id: "payment-amount"
+    = form.submit "Add payment", role: "button"
+
+== button_to "Destroy this purchase", purchase_path(@purchase), method: :delete, class: "btn-danger"  
